feat: add contacts handler
This endpoint aims to provide the foundation for phone books which relay
information about existing endpoints in Asterisk. It may be used
directly or through something like an LDAP adaptor to provide phonebook
services to hardphones.
