# docs/swagger.yaml
@@ -15,6 +15,26 @@ definitions:
       destination:
         type: string
     type: object
+  model.Contact:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      phone:
+        type: string
+    type: object
+  model.ContactPage:
+    properties:
+      contacts:
+        items:
+          $ref: '#/definitions/model.Contact'
+        type: array
+      retrieved:
+        type: integer
+      total:
+        type: integer
+    type: object
   model.Endpoint:
     properties:
       accountCode:
@@ -149,6 +169,29 @@ paths:
         provide details on how
       tags:
       - bouncer
+  /contacts:
+    get:
+      parameters:
+      - default: 0
+        description: Zero based page to fetch
+        in: query
+        name: page
+        type: integer
+      - default: 20
+        description: Max amount of results to be returned
+        in: query
+        name: pageSize
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.ContactPage'
+      summary: List all contacts in the system.
+      tags:
+      - contacts
   /endpoints:
     get:
       parameters:
